--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Добро пожаловать в Мафию Онлайн</h1>
-    <p>Здесь будет интерфейс игры с веб-камерами и микрофоном.</p>
+    <p>Здесь будет интерфейс игры с веб-камерами и микрофонами.</p>
 
     <script src="main.js"></script>
 </body>
