--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Мафия Онлайн</title>
+    <title>Мафия Онлайн Бесплатно</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
